Fixed wrong color on SVG logo

--- a/styles.css
+++ b/styles.css
@@ -11,5 +11,5 @@
 }
 
 .filter-purple {
-    filter: invert(88%) sepia(44%) saturate(5926%) hue-rotate(354deg) brightness(96%) contrast(110%);
+    filter: invert(38%) sepia(8%) saturate(4638%) hue-rotate(183deg) brightness(98%) contrast(85%);
 }
